coq_translation/axiomatized/examples/guessing_game/guessing_game.err
error[E0432]: unresolved import `rand`
 --> examples/guessing_game/guessing_game.rs:3:5
  |
3 | use rand::Rng;
  |     ^^^^ maybe a missing crate `rand`?
  |
  = help: consider adding `extern crate rand` to use the `rand` crate

error[E0433]: failed to resolve: use of undeclared crate or module `rand`
 --> examples/guessing_game/guessing_game.rs:7:25
  |
7 |     let secret_number = rand::thread_rng().gen_range(1..=100);
  |                         ^^^^ use of undeclared crate or module `rand`

thread 'rustc' panicked at 'thir failed to compile', lib/src/top_level.rs:674:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
